<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.myshop.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_productsFragment"
            app:destination="@id/productsFragment" />
    </fragment>
    <fragment
        android:id="@+id/productsFragment"
        android:name="com.example.myshop.fragments.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/action_productsFragment_to_ordersFragment"
            app:destination="@id/ordersFragment" />
    </fragment>
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.example.myshop.fragments.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_ordersFragment_to_soldFragment"
            app:destination="@id/soldProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/soldProductFragment"
        android:name="com.example.myshop.fragments.SoldProductFragment"
        android:label="@string/sold"
        tools:layout="@layout/fragment_sold_product" />
</navigation>