<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.AddProductActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gradient">

            <com.example.myshop.utils.font.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_product"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_s" />
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_product_add_product"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/img_product_size"
                        android:background="@color/divider_color"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:scaleType="fitXY"/>

                    <ImageView
                        android:id="@+id/setup_img_add_product"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="@dimen/padding_margin_s"
                        android:src="@drawable/ic_baseline_add_a_photo_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_margin_l">

                    <com.example.myshop.font.RegularEditText
                        android:id="@+id/product_title_add_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/padding_margin_s"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/product_title"
                        android:paddingHorizontal="@dimen/padding_margin_s"
                        android:paddingVertical="@dimen/padding_margin_m" />

                    <com.example.myshop.font.RegularEditText
                        android:id="@+id/product_price_add_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/padding_margin_s"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/product_price"
                        android:inputType="number"
                        android:drawableEnd="@drawable/ic_baseline_attach_money_24"
                        android:paddingHorizontal="@dimen/padding_margin_s"
                        android:paddingVertical="@dimen/padding_margin_m" />

                    <com.example.myshop.font.RegularEditText
                        android:id="@+id/product_description_add_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/padding_margin_s"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/product_description"
                        android:paddingHorizontal="@dimen/padding_margin_s"
                        android:paddingVertical="@dimen/padding_margin_m" />

                    <com.example.myshop.font.RegularEditText
                        android:id="@+id/product_quantity_add_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/padding_margin_s"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/product_quantity"
                        android:inputType="number"
                        android:paddingHorizontal="@dimen/padding_margin_s"
                        android:paddingVertical="@dimen/padding_margin_m" />

                    <com.example.myshop.utils.font.BoldButton
                        android:id="@+id/btn_submit_add_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_margin_xl"
                        android:background="@drawable/button_background"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_m" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>